--- a/kakeibo/templates/kakeibo/payment_list.html
+++ b/kakeibo/templates/kakeibo/payment_list.html
@@ -1,35 +1,39 @@
 <!-- kakeibo/templates/kakeibo/payment_list.html -->
 {% extends 'kakeibo/base.html' %}
+{% load humanize %}
 {% block content %}
 
+<!-- 検索フォーム -->
 <form class="mt-2" id="search-form" action="" method="GET">
-  <h1>検索フォーム!</h1>
+  <div>
+    <label class="label mr-4">年月</label>
+    {{ search_form.year }}
+    {{ search_form.month }}
+  </div>
+  <div class="mt-4">
+    <label class="label mr-4">金額</label>
+    {{ search_form.greater_than }}
+    <span class="ml-4 mr-4">～</span>
+    {{ search_form.less_than }}
+  </div>
+  <div class="mt-4">
+    {{ search_form.key_word }}
+    <button class="btn btn-info ml-4" type="submit">検索</button>
+  </div>
+  <div class="mt-2 inline">
+    {{ search_form.category }}
+  </div>
 </form>
 
+<!-- 一覧表示 -->
 <table class="table mt-3">
-  <tr>
-    <th>日付</th>
-    <th>カテゴリ</th>
-    <th>金額</th>
-    <th>概要</th>
-  </tr>
-  {% for payment in payment_list %}
-
-  <tr>
-    <td>{{ payment.date }}</td>
-    <td>{{ payment.category }}</td>
-    <td>{{ payment.price}}</td>
-    <td>
-      {% if payment.description %}
-      {{ payment.description }}
-      {% endif %}
-    </td>
-  </tr>
-  {% endfor %}
+  ...
 </table>
 
+<!-- ページネーション -->
 <div class="mt-5">
-  <h1>ページネーション!</h1>
+  <h1>ページネーション！</h1>
 </div>
+
 
 {% endblock %}
