--- a/kakeibo/templates/kakeibo/css/style.css
+++ b/kakeibo/templates/kakeibo/css/style.css
@@ -238,3 +238,48 @@ a.header-title {
   width: 20%;
   padding: 15px 0;
 }
+/* --------------------------------
+ * フォーム
+ * -------------------------------- */
+.form {
+  font-size: 1.4rem;
+  padding: 3px 6px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: solid 1px #ccc;
+  background-color: #fff;
+  font-family: "Ubuntu", "Noto Sans JP", sans-serif;
+}
+
+.form:focus {
+  outline: 0;
+  box-shadow: 0 0 0 .25rem rgba(18, 102, 241, .25);
+}
+
+/* --------------------------------
+ * ボタン
+ * -------------------------------- */
+.btn, a.btn {
+  font-size: 1.4rem;
+  color: #333;
+  -webkit-appearance: none;
+  padding: 4px 16px;
+  line-height: 1.3;
+  border-radius: 4px;
+  border: solid 1px #ccc;
+  background-color: #fff;
+  vertical-align: bottom;
+  font-family: "Ubuntu", "Noto Sans JP", sans-serif;
+  display: inline-block;
+  text-align: center;
+  cursor: pointer;
+}
+
+.btn:hover, a.btn:hover {
+  opacity: 0.5;
+}
+
+.btn-info, a.btn-info {
+  background-color: #39c0ed;
+  color: #fff;
+}
