--- a/kakeibo/templates/kakeibo/css/style.css
+++ b/kakeibo/templates/kakeibo/css/style.css
@@ -283,3 +283,58 @@ a.header-title {
   background-color: #39c0ed;
   color: #fff;
 }
+
+/* --------------------------------
+ * カスタム検索
+ * -------------------------------- */
+.inline {
+  margin: 10px 0;
+  overflow-x: auto;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+  padding: 0;
+}
+
+.inline::-webkit-scrollbar {
+  width: 5px;
+}
+
+.inline::-webkit-scrollbar-track {
+  background: #fff;
+  border: none;
+  border-radius: 10px;
+  box-shadow: inset 0 0 2px #777;
+}
+
+.inline::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 10px;
+  box-shadow: none;
+}
+
+.custom-radio {
+  display: none;
+}
+
+.custom-radio:checked+.custom-radio-label {
+  background: #00809d;
+  color: #fff;
+}
+
+.custom-radio-label {
+  box-sizing: border-box;
+  display: inline-block;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  border: solid 1px #ccc;
+  transition: 0.25s;
+  padding: 4px 16px;
+  cursor: pointer;
+  font-size: 14px;
+  margin: 3px;
+}
+
+.custom-radio-label:hover {
+  opacity: 0.5;
+}
