--- a/kakeibo/templates/kakeibo/base.html
+++ b/kakeibo/templates/kakeibo/base.html
@@ -22,6 +22,9 @@
         <li class="ml-5">
           <a href="{% url 'kakeibo:payment_list'%}">支出一覧</a>
         </li>
+        <li class="ml-5">
+          <a href="{% url 'kakeibo:income_list'%}">収入一覧</a>
+        </li>
     </nav>
   </header>
 
