--- a/kakeibo/templates/kakeibo/css/style.css
+++ b/kakeibo/templates/kakeibo/css/style.css
@@ -346,3 +346,38 @@ a.header-title {
 .prev, .next {
   font-weight: bold;
 }
+
+.alert {
+  position: relative;
+  padding: 1.25rem 1.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  line-height: 1.3;
+}
+
+.alert-btn-close {
+  font-size: 2rem;
+  color: #888;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  padding: 1.5625rem 1.5rem;
+  border: None;
+  background-color: inherit;
+  cursor: pointer;
+}
+
+.alert-btn-close:hover {
+  opacity: 0.5;
+}
+
+.alert-success {
+  color: #006e2c;
+  background-color: #ccf1db;
+  border-color: #b3e9c9
+}
+
+.is-hidden {
+  display: none;
+}
