--- a/kakeibo/templates/kakeibo/css/style.css
+++ b/kakeibo/templates/kakeibo/css/style.css
@@ -381,3 +381,37 @@ a.header-title {
 .is-hidden {
   display: none;
 }
+
+/* 追加 */
+.btn-danger, a.btn-danger {
+  background-color: #f93154;
+  color: #fff;
+}
+
+...
+
+/* --------------------------------
+ * 一覧ページのボタン部分
+ * -------------------------------- */
+/* 通常は横並び */
+.manage-btn-area {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.delete-btn-area {
+  margin-left: 5px;
+}
+
+/* 760px以下は縦並び */
+@media (max-width: 760px) {
+  .manage-btn-area {
+    flex-direction: column;
+  }
+
+  .delete-btn-area {
+    margin-left: 0px;
+    margin-top: 5px;
+  }
+}
