--- a/kakeibo/templates/kakeibo/payment_list.html
+++ b/kakeibo/templates/kakeibo/payment_list.html
@@ -30,7 +30,36 @@
 
 <!-- 一覧表示 -->
 <table class="table mt-3">
-  ...
+  <tr>
+    <th>日付</th>
+    <th>カテゴリ</th>
+    <th>金額</th>
+    <th>摘要</th>
+    <th>編集</th> 
+  </tr>
+  {% for payment in payment_list %}
+
+  <tr>
+    <td>{{ payment.date }}</td>
+    <td>{{ payment.category }}</td>
+    <td>{{ payment.price}}</td>
+    <td>
+      {% if payment.description %}
+      {{ payment.description }}
+      {% endif %}
+    </td>
+    <td>
+      <div class="manage-btn-area">
+        <div class="update-btn-area">
+          <a class="btn btn-info" href="{% url 'kakeibo:payment_update' payment.pk %}">更新</a>
+        </div>
+        <div class="delete-btn-area">
+          <a class="btn btn-danger" href="{% url 'kakeibo:payment_delete' payment.pk %}">削除</a>
+        </div>
+      </div>
+    </td>
+  </tr>
+  {% endfor %}
 </table>
 
 <!-- ページネーション -->
