ダッシュボード機能

--- a/kakeibo/templates/kakeibo/base.html
+++ b/kakeibo/templates/kakeibo/base.html
@@ -31,6 +31,9 @@
         <li class="ml-5">
           <a href="{% url 'kakeibo:income_create'%}">収入登録</a>
         </li>
+        <li class="ml-5">
+          <a href="{% url 'kakeibo:month_dashboard' now_year now_month%}">月間支出</a>
+        </li>
     </nav>
   </header>
 
