推移グラフ

--- a/kakeibo/templates/kakeibo/base.html
+++ b/kakeibo/templates/kakeibo/base.html
@@ -34,6 +34,9 @@
         <li class="ml-5">
           <a href="{% url 'kakeibo:month_dashboard' now_year now_month%}">月間支出</a>
         </li>
+        <li class="ml-5">
+          <a href="{% url 'kakeibo:transition' %}">収支推移</a>
+        </li>
     </nav>
   </header>
 
