yml command manage.py migrate追加

--- a/kakeibo/templates/kakeibo/transition.html
+++ b/kakeibo/templates/kakeibo/transition.html
@@ -96,6 +96,7 @@
 </script>
 {% endblock %}
 
-{% block extrajs %}
+{% comment %} {% block extrajs %}
+<!-- plotlyのjs -->
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-{% endblock %}
+{% endblock %} {% endcomment %}
