--- a/kakeibo/templates/kakeibo/base.html
+++ b/kakeibo/templates/kakeibo/base.html
@@ -32,6 +32,9 @@
           <a href="{% url 'kakeibo:income_create'%}">収入登録</a>
         </li>
         <li class="ml-5">
+          <a href="{% url 'kakeibo:rest_create'%}">残高登録</a>
+        </li>
+        <li class="ml-5">
           <a href="{% url 'kakeibo:month_dashboard' now_year now_month%}">月間支出</a>
         </li>
         <li class="ml-5">
