残高更新機能追加

--- a/kakeibo/templates/kakeibo/base.html
+++ b/kakeibo/templates/kakeibo/base.html
@@ -26,6 +26,9 @@
           <a href="{% url 'kakeibo:income_list'%}">収入一覧</a>
         </li>
         <li class="ml-5">
+          <a href="{% url 'kakeibo:rest_list'%}">残高一覧</a>
+        </li>
+        <li class="ml-5">
           <a href="{% url 'kakeibo:payment_create'%}">支出登録</a>
         </li>
         <li class="ml-5">
