--- a/kakeibo/templates/kakeibo/payment_list.html
+++ b/kakeibo/templates/kakeibo/payment_list.html
@@ -42,6 +42,7 @@
   <tr>
     <td>{{ payment.date }}</td>
     <td>{{ payment.category }}</td>
+    <td>{{ payment.cardcategory}}</td>
     <td>{{ payment.price}}</td>
     <td>
       {% if payment.description %}
