--- a/kakeibo/templates/kakeibo/base.html
+++ b/kakeibo/templates/kakeibo/base.html
@@ -9,15 +9,65 @@
   <title>家計簿アプリ</title>
   <link rel="stylesheet" href="{% static 'kakeibo/css/reset.css' %}">
   <link rel="stylesheet" href="{% static 'kakeibo/css/style.css' %}">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   {% block extrajs %}{% endblock %}
 </head>
 
 <body>
   <header class="page-header">
     <h1>
-      <a href="{% url 'kakeibo:payment_list' %}" class="header-title">家計簿アプリ</a>
+      <a href="{% url 'kakeibo:index' %}" class="header-title">家計簿アプリ</a>
     </h1>
-    <nav class="nav">
+    <div class="pulldownmenu">
+      <select name="select" onChange="location.href=value;">
+        {% comment %} <option value="#">ページを選択してください</option> {% endcomment %}
+        <option value="{% url 'kakeibo:payment_create' %}">支出登録</option>
+        <option value="{% url 'kakeibo:income_create' %}">収入登録</option>
+        <option value="{% url 'kakeibo:rest_create' %}">残高登録</option>
+        <option value="{% url 'kakeibo:payment_list' %}">支出一覧</option>
+        <option value="{% url 'kakeibo:income_list' %}">収入一覧</option>
+        <option value="{% url 'kakeibo:month_dashboard' now_year now_month%}">月間支出</option>
+        <option value="{% url 'kakeibo:transition' %}">収支推移</option>
+      </select>
+    </div>
+
+    <div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          {% comment %} <a class="navbar-brand" href="{% url 'kakeibo:payment_create' %}">支出登録</a> {% endcomment %}
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'kakeibo:payment_create' %}">支出登録</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'kakeibo:income_create' %}">収入登録</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'kakeibo:rest_create' %}">残高登録</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'kakeibo:payment_list' %}">支出一覧</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'kakeibo:income_list' %}">収入一覧</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'kakeibo:month_dashboard' now_year now_month%}">月間支出</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'kakeibo:transition' %}">収支推移</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    
+    {% comment %} <nav class="nav">
       <ul class="main-nav ml-5">
         <li class="ml-5">
           <a href="{% url 'kakeibo:payment_list'%}">支出一覧</a>
@@ -43,7 +93,7 @@
         <li class="ml-5">
           <a href="{% url 'kakeibo:transition' %}">収支推移</a>
         </li>
-    </nav>
+    </nav> {% endcomment %}
   </header>
 
   <div class="layout">
