--- a/kakeibo/templates/kakeibo/base.html
+++ b/kakeibo/templates/kakeibo/base.html
@@ -15,8 +15,8 @@
 
 <body>
   <header class="page-header">
-    <h1>
-      <a href="{% url 'kakeibo:index' %}" class="header-title">家計簿アプリ</a>
+    <h1 class='title-name'>
+      <a href="{% url 'kakeibo:index' %}" class="header-title title-name">家計簿アプリ</a>
     </h1>
     <div class="pulldownmenu">
       <select name="select" onChange="location.href=value;">
