--- a/kakeibo/templates/kakeibo/css/style.css
+++ b/kakeibo/templates/kakeibo/css/style.css
@@ -126,7 +126,9 @@ a.header-title {
 }
 
 .mt-2 {
+  size: 30px;
   margin-top: 0.5rem !important;
+  float: left;
 }
 
 .mt-3 {
@@ -447,4 +449,21 @@ a.header-title {
 .section-title {
   font-size: 1.4rem;
   color: #888;
+}
+
+.box7{
+  padding: 0.5em 1em;
+  margin: auto;
+  color: #474747;
+  background: whitesmoke;/*背景色*/
+  border-left: double 7px #4ec4d3;/*左線*/
+  border-right: double 7px #4ec4d3;/*右線*/
+}
+.box7 p {
+  margin: 0; 
+  padding: 0;
+}
+
+.title-name {
+  float: left;
 }
