--- a/kakeibo/templates/kakeibo/index.html
+++ b/kakeibo/templates/kakeibo/index.html
@@ -3,19 +3,19 @@
 {% block content %}
 
 
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 60rem; margin: 5% auto;">
     <div class="card-body">
       <h5 class="card-title">今月の支払い</h5>
       <p class="card-text">{{ total }}円</p>
     </div>
 </div>
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 60rem; margin: 5% auto;">
     <div class="card-body">
       <h5 class="card-title">今月の予算</h5>
       <p class="card-text">円</p>
     </div>
 </div>
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 60rem; margin: 5% auto;">
     <div class="card-body">
       <h5 class="card-title">今月のクレカ支払い</h5>
       <p class="card-text">{{ total_payment }}円</p>
