--- a/kakeibo/templates/kakeibo/transition.html
+++ b/kakeibo/templates/kakeibo/transition.html
@@ -2,21 +2,27 @@
 
 {% block content %}
 <form id="search-form" action="" method="GET">
-  <h2 class="section-title">表示グラフ</h2>
   <div class="mt-2">
+    <p class="section-title">表示グラフ</p>
     {{ search_form.graph_visible }}
   </div>
   <!-- 表示グラフが収入の時は表示しない -->
   {% if search_form.cleaned_data.graph_visible != 'Income' %}
-  <h2 class=" mt-4 section-title">支出カテゴリ</h2>
   <div class="mt-2">
+    <p class=" mt-4 section-title">支出カテゴリ</p>
     {{ search_form.payment_category }}
+  </div>
+  
+  <div class="mt-2">
+    <p class=" mt-4 section-title">支出カード種類</p>
+    {{ search_form.payment_cardcategory }}
   </div>
   {% endif %}
   <!-- 表示グラフが支出の時は表示しない -->
   {% if search_form.cleaned_data.graph_visible != 'Payment' %}
-  <h2 class=" mt-4 section-title">収入カテゴリ</h2>
+  
   <div class="mt-2" style="padding-bottom:10px;">
+    <p class=" mt-4 section-title">収入カテゴリ</p>
     {{ search_form.income_category }}
   </div>
   {% endif %}
