--- a/kakeibo/templates/kakeibo/index.html
+++ b/kakeibo/templates/kakeibo/index.html
@@ -6,20 +6,25 @@
 <div class="card" style="width: 60rem; margin: 5% auto;">
     <div class="card-body">
       <h5 class="card-title">今月の支払い</h5>
-      <p class="card-text">{{ total }}円</p>
+      <p class="card-text">{{ total_payment }}円</p>
     </div>
 </div>
 <div class="card" style="width: 60rem; margin: 5% auto;">
     <div class="card-body">
       <h5 class="card-title">今月の予算</h5>
-      <p class="card-text">円</p>
+      <p class="card-text">{{ usable }}円</p>
     </div>
 </div>
 <div class="card" style="width: 60rem; margin: 5% auto;">
     <div class="card-body">
-      <h5 class="card-title">今月のクレカ支払い</h5>
-      <p class="card-text">{{ total_payment }}円</p>
+      <h5 class="card-title">貯金額</h5>
+      <p class="card-text">{{ rest }}円</p>
     </div>
+</div>
+<div>
+    {% for payment in payments %}
+        <p>{{ payment.cardcategory }}</p>
+    {% endfor %}
 </div>
 
 {% endblock %}
