--- a/kakeibo/templates/kakeibo/month_dashboard.html
+++ b/kakeibo/templates/kakeibo/month_dashboard.html
@@ -22,7 +22,7 @@
         {% for key,value in table_set.items %}
         <tr>
           <td>{{ key }}</td>
-          <td></td>
+          <td>{{ value }}</td>
         </tr>
         {% endfor %}
         <tr>
